plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.BangGuddle'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	configureEach {
		exclude group: 'commons-logging', module: 'commons-logging'
	}

	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// OpenVidu Java Client 라이브러리 의존성 추가
	implementation 'io.openvidu:openvidu-java-client:2.30.0'

	// Validation 관련 의존성 추가
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.3.2'

	// Security 관련 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// AWS 관련 의존성 추가
	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'

	// Test 시 롬복 사용을 위한 의존성 추가
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok'

	// Redis 관련 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// JWT 관련 의존성 추가
	implementation 'io.jsonwebtoken:jjwt:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Swagger 관련 의존성 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	//ffmpeg 관련 의존성 추가
	implementation 'net.bramp.ffmpeg:ffmpeg:0.7.0'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation 'org.springframework.security:spring-security-test'


	implementation 'org.apache.poi:poi:5.2.0'
	implementation 'org.apache.poi:poi-ooxml:5.2.0'

	implementation "org.springframework.data:spring-data-elasticsearch:4.0.0.RELEASE"
	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.6.2'
	testImplementation "org.testcontainers:elasticsearch:1.15.3"
}
ext {
	set('elasticsearchVersion', "7.6.2")
}


tasks.named('test') {
	useJUnitPlatform()
}
